--- a/templates/courses/certificate_preview.html
+++ b/templates/courses/certificate_preview.html
@@ -1,11 +1,10 @@
-{% extends 'base.html' %}
-
+{% extends 'profiles/profile_base.html' %}
 {% load static %}
 
-{% block content %}
-<div id="certificate_preview"></div>
-{% endblock content %}
-
-{% block extra_js %}
-<script type="text/javascript" src="{% static 'assets/build/certificate_preview.bundle.js' %}"></script>
-{% endblock extra_js %}
+{% block profile_content %}
+     <div class="col-md-8 col-lg-9 order-md-1">
+        <div class="row">
+            <img class="certificate" src="data:image/jpeg;base64,{{ img_str }}" alt="No hay imagen">
+        </div>
+     </div>
+{% endblock profile_content %}
