--- a/static/assets/css/kidz.css
+++ b/static/assets/css/kidz.css
@@ -17362,3 +17362,12 @@ html {
 .certificate{
   width: 900px !important;
 }
+
+.event_list_link{
+  border-color: red !important;
+  margin-top: 60px;
+  color: red;
+  border-width: thick;
+  border-style: dashed;
+}
+
