--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -207,7 +207,7 @@
         {% endfor %}
     </div>
 
-    <div class="section-title justify-content-center mb-4 mb-md-8 wow">
+    <div class="section-title justify-content-center mb-4 mb-md-8 wow event_list_link">
       <span class="shape shape-left bg-warning"></span>
         <a href="{% url 'events_all' %}"><h4 class="text-warning">&nbsp; Ver Todo &nbsp;</h4></a>
       <span class="shape shape-right bg-warning"></span>
