--- a/templates/profiles/profile_events.html
+++ b/templates/profiles/profile_events.html
@@ -7,32 +7,35 @@
 
             <div class="media media-avator-view flex-column flex-sm-row">
               <div class="media-body">
-
-                {% if certificate_requests %}
-                    <div class="card">
-                      <div class="card-header list-group-item-success certificate_requests">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link cert_requests" type="button">
-                              {% if certificate_requests.count == 1 %}
-                                  Hay {{ certificate_requests.count }} usuario que ha solicitado un certificado de tu curso / evento.
-                              {% else %}
-                                  Hay {{ certificate_requests.count }} usuarios que han solicitado certificados de tu cursos / eventos.
-                              {% endif %}
-                          </button>
-                        </h5>
-                      </div>
+                <div class="row">
+                    <div class="col-12">
+                    {% if certificate_requests %}
+                        <div class="card">
+                          <div class="card-header list-group-item-success certificate_requests">
+                            <h5 class="mb-0">
+                              <button class="btn btn-link cert_requests" type="button">
+                                  {% if certificate_requests.count == 1 %}
+                                      Hay {{ certificate_requests.count }} usuario que ha solicitado un certificado de tu curso / evento.
+                                  {% else %}
+                                      Hay {{ certificate_requests.count }} usuarios que han solicitado certificados de tu cursos / eventos.
+                                  {% endif %}
+                              </button>
+                            </h5>
+                          </div>
+                        </div>
+                    {% else %}
+                        <div class="card">
+                          <div class="card-header list-group-item-info">
+                            <h5 class="mb-0">
+                              <button class="btn btn-link cert_requests certificate_requests" type="button">
+                                <i class="fa fa-certificate"></i> No tienes nuevas solicitudes de certificados en tus cursos.
+                              </button>
+                            </h5>
+                          </div>
+                        </div>
+                    {% endif %}
                     </div>
-                {% else %}
-                    <div class="card">
-                      <div class="card-header list-group-item-info">
-                        <h5 class="mb-0">
-                          <button class="btn btn-link cert_requests certificate_requests" type="button">
-                            <i class="fa fa-certificate"></i> No tienes nuevas solicitudes de certificados en tus cursos.
-                          </button>
-                        </h5>
-                      </div>
-                    </div>
-                {% endif %}
+                </div>
 
                   <div class="col-12">
                     <div class="text-sm-center mt-6">
@@ -41,13 +44,18 @@
                         Crear Nuevo Curso o Evento
                       </button>
                     </div>
-                      <hr>
+                  </div>
 
-                      <p>
+                  <div class="col-12">
+                      <hr>
+                      <div class="row">
+
+                      <p class="text-left">
                          <strong>Tus Cursos y Eventos: </strong>
                           <br>
                       </p>
 
+                      </div>
                   </div>
 
                 {% include 'courses/events_list_section.html' with events=events %}
