--- a/templates/profiles/profile_events.html
+++ b/templates/profiles/profile_events.html
@@ -46,6 +46,9 @@
                     </div>
                   </div>
 
+              </div> {#     Media Body       #}
+            </div>{#     Media       #}
+
                   <div class="col-12">
                       <hr>
                       <div class="row">
@@ -58,10 +61,10 @@
                       </div>
                   </div>
 
+            <div class="row">
                 {% include 'courses/events_list_section.html' with events=events %}
-
-              </div>
             </div>
+
 
         </div>
     </div>
