event list bug frontend

--- a/templates/profiles/profile_base.html
+++ b/templates/profiles/profile_base.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="main-wrapper blog-grid-left-sidebar">
+<div class="main-wrapper course-list-left-sidebar">
 
 <!-- ====================================
 ———	BLOG GRID LEFT SIDEBAR
