--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -78,7 +78,7 @@
                 <label for="description">
                     Descripción*
                 </label>
-                <textarea class="form-control" id="description" rows="7" name="description"></textarea>
+                <textarea class="form-control" id="description" rows="7" name="description" placeholder="¿A quien esta dirigido el evento? ¿Cuál es su público objetivo?"></textarea>
             </div>
 
             <label class="my-1 mr-2" for="">
@@ -300,7 +300,7 @@
                 },
                 description: {
                     required: true,
-                    minlength: 10
+                    minlength: 100
                 }
             },
             messages: {
