--- a/templates/courses/event_edit.html
+++ b/templates/courses/event_edit.html
@@ -95,7 +95,8 @@
                 <label for="description">
                     Descripción
                 </label>
-                <textarea class="form-control" id="description" rows="7" name="description">
+                <textarea class="form-control" id="description" rows="7" name="description"
+                          placeholder="¿Cuál es el público objetivo? ¿Cuál será el contenido del evento?">
                     {{ event.description }}
                 </textarea>
             </div>
